--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Script\GameController.cs" />
      <Compile Include="Assets\Script\GridSpace.cs" />
  <Reference Include="UnityEditor.StandardEvents">
  <HintPath>E:/Unity/tic_tac_toe/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
